2016-xx-xx 0.06 [xxxxxxx]
2016-08-12 0.05 [fbae0f5]
  + The program integrates into a freedesktop.org desktop
  + rpm and deb installers are generated
  + undo/redo works for creating, modifying and deleting objects
2016-07-03 v004 [09e8ac4]
  + The user can delete classifiers and diagrams
  - DB format incompatible to version 0.03 (alt: in diagramelements, manually create the column "display_flags" as INTEGER)
2016-05-22 v003 [e0c0196]
  + The user can select and switch the database file
2016-05-01 v002 [1d03746]
  + The user can create and rename classifiers like classes
  - DB format incompatible to version 0.01
2016-03-31 v001 [b8be2b]
  + The user can create, rename and navigate diagrams