@@ -1,4 +1,5 @@
 2016-xx-xx 0.06 [xxxxxxx]
+  + cut+copy allow to copy diagrams and classifiers to the clipboard
 2016-08-12 0.05 [fbae0f5]
   + The program integrates into a freedesktop.org desktop
   + rpm and deb installers are generated
